; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_script.c_script_delay.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_script.c_script_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"delay\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @script_delay(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @lua_getglobal(i32* %4, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @lua_call(i32* %6, i32 0, i32 1)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @lua_tonumber(i32* %8, i32 -1)
  store i32 %9, i32* %3, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_pop(i32* %10, i32 1)
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @lua_getglobal(i32*, i8*) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i32 @lua_tonumber(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
